[gd_scene load_steps=5 format=2]

[ext_resource path="res://world/traps/spikes/spikes.gd" type="Script" id=1]
[ext_resource path="res://art/spike A.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 11.9668, 12.0561 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 12.1453, 10.8689 )

[node name="Spikes" type="RigidBody2D" index="0" groups=[
"Persist",
]]

input_pickable = false
collision_layer = 64
collision_mask = 3
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 0.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]
damage = 10
stagger_time = 0.3

[node name="Sprite" type="Sprite" parent="." index="0"]

scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Area2D" type="Area2D" parent="." index="1"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 64
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

position = Vector2( 0.161919, -0.441925 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

position = Vector2( -0.0165939, 1.85777 )
shape = SubResource( 2 )

[node name="CoolDown" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]

[connection signal="timeout" from="CoolDown" to="." method="_on_CoolDown_timeout"]


